--- a/make_command.sh.in
+++ b/make_command.sh.in
@@ -3,5 +3,5 @@
 ANDROID_DEV="${ANDROID_SYSROOT}/usr" \
 CROSS_TOP="${IOS_DEVELOPER_ROOT}" \
 CROSS_SDK="${IOS_TARGET}${IOS_SDK_VERSION}.sdk" \
-make && make install
+make -j4 && make install
 
