--- a/make_command.sh.in
+++ b/make_command.sh.in
@@ -3,5 +3,6 @@
 ANDROID_DEV="${ANDROID_SYSROOT}/usr" \
 CROSS_TOP="${IOS_DEVELOPER_ROOT}" \
 CROSS_SDK="${IOS_TARGET}${IOS_SDK_VERSION}.sdk" \
+IOS_ARCH="${IOS_ARCH}" \
 make && make install
 
