Use CMAKE_INSTALL_PREFIX as installation dir

--- a/make_command.sh.in
+++ b/make_command.sh.in
@@ -1,8 +1,9 @@
 #!/bin/bash
 
+make clean || exit 1
 ANDROID_DEV="${ANDROID_SYSROOT}/usr" \
 CROSS_TOP="${IOS_DEVELOPER_ROOT}" \
 CROSS_SDK="${IOS_TARGET}${IOS_SDK_VERSION}.sdk" \
 IOS_ARCH="${IOS_ARCH}" \
-make && make install
+make
 
