--- a/configure_command.sh.in
+++ b/configure_command.sh.in
@@ -8,4 +8,4 @@ NM="${CMAKE_NM}" \
 STRIP="${CMAKE_STRIP}" \
 RANLIB="${CMAKE_RANLIB}" \
 GPROF="${CMAKE_GPROF}" \
-${CMAKE_CURRENT_SOURCE_DIR}/Configure --prefix=${CMAKE_BINARY_DIR}/out ${OPENSSL_TARGET_PLATFORM}
+${CMAKE_CURRENT_SOURCE_DIR}/Configure --prefix=${CMAKE_INSTALL_PREFIX} ${OPENSSL_TARGET_PLATFORM}
